--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -763,7 +763,15 @@
                             <string>Gtk button order</string>
                         </property>
                     </widget>
-                    <spacer row="6" column="2">
+                    <widget class="QCheckBox" row="3" column="0" rowspan="1" colspan="2">
+                        <property name="name">
+                            <cstring>mapKdeIcons</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Map KDE icons (Gtk2 only)</string>
+                        </property>
+                    </widget>
+                    <spacer row="7" column="2">
                         <property name="name">
                             <cstring>spacer7</cstring>
                         </property>
@@ -776,11 +784,27 @@
                         <property name="sizeHint">
                             <size>
                                 <width>20</width>
-                                <height>240</height>
+                                <height>207</height>
                             </size>
                         </property>
                     </spacer>
-                    <widget class="QLabel" row="5" column="0">
+                    <widget class="QPushButton" row="6" column="1">
+                        <property name="name">
+                            <cstring>passwordChar</cstring>
+                        </property>
+                        <property name="sizePolicy">
+                            <sizepolicy>
+                                <hsizetype>4</hsizetype>
+                                <vsizetype>0</vsizetype>
+                                <horstretch>0</horstretch>
+                                <verstretch>0</verstretch>
+                            </sizepolicy>
+                        </property>
+                        <property name="text">
+                            <string></string>
+                        </property>
+                    </widget>
+                    <widget class="QLabel" row="6" column="0">
                         <property name="name">
                             <cstring>textLabel1_2</cstring>
                         </property>
@@ -803,28 +827,19 @@
 &lt;p&gt;&lt;b&gt;Note:&lt;/b&gt; This may brake some applications, as it wiill alter the behaviour of dialogs in a way the application has not intended. Therefore, please use with care.&lt;/p&gt;</string>
                         </property>
                     </widget>
-                    <widget class="QPushButton" row="5" column="1">
+                    <widget class="QCheckBox" row="5" column="0" rowspan="1" colspan="2">
                         <property name="name">
-                            <cstring>passwordChar</cstring>
-                        </property>
-                        <property name="sizePolicy">
-                            <sizepolicy>
-                                <hsizetype>4</hsizetype>
-                                <vsizetype>0</vsizetype>
-                                <horstretch>0</horstretch>
-                                <verstretch>0</verstretch>
-                            </sizepolicy>
+                            <cstring>inactiveHighlight</cstring>
                         </property>
                         <property name="text">
-                            <string></string>
+                            <string>Use blended background/highlight colour for highlight of inactive elements</string>
                         </property>
-                    </widget>
-                    <widget class="QCheckBox" row="3" column="0" rowspan="1" colspan="2">
-                        <property name="name">
-                            <cstring>mapKdeIcons</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Map KDE icons (Gtk2 only)</string>
+                        <property name="whatsThis" stdset="0">
+                            <string>&lt;h2&gt;&lt;font color="#ff0000"&gt;Warning: Experimental!&lt;/font&gt;&lt;/h1&gt;&lt;p&gt;&lt;p&gt;Some applications - such as Kate, Kaffeine, and GIMP - produce dialogs that have no 'parent'. This causes the dialog to recieve an entry in the taskbar, and allows the dialog to be minimised independantly of the main application window.&lt;/p&gt;
+
+&lt;p&gt;If you enable this option, QtCurve will try to 'fix' this by assigning the dialogs a parent.&lt;/p&gt;
+
+&lt;p&gt;&lt;b&gt;Note:&lt;/b&gt; This may brake some applications, as it wiill alter the behaviour of dialogs in a way the application has not intended. Therefore, please use with care.&lt;/p&gt;</string>
                         </property>
                     </widget>
                 </grid>
@@ -911,6 +926,7 @@
     <tabstop>gtkButtonOrder</tabstop>
     <tabstop>mapKdeIcons</tabstop>
     <tabstop>fixParentlessDialogs</tabstop>
+    <tabstop>inactiveHighlight</tabstop>
     <tabstop>passwordChar</tabstop>
     <tabstop>optionBtn</tabstop>
 </tabstops>
